--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
   },
   "dependencies": {
     "@heroicons/react": "^1.0.6",
+    "emoji-mart": "^3.0.1",
+    "firebase": "^9.6.8",
     "next": "latest",
     "react": "^17.0.2",
     "react-dom": "^17.0.2"
