--- a/package.json
+++ b/package.json
@@ -9,10 +9,13 @@
     "@heroicons/react": "^1.0.6",
     "emoji-mart": "^3.0.1",
     "firebase": "^9.6.8",
+    "moment": "^2.29.1",
     "next": "latest",
     "next-auth": "^4.3.0",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "react-moment": "^1.1.1",
+    "recoil": "^0.6.1"
   },
   "devDependencies": {
     "@types/node": "17.0.4",
